fix: (Picker) blink on iOS devices duration popup open animation

--- a/src/components/picker-view/picker-view.less
+++ b/src/components/picker-view/picker-view.less
@@ -63,6 +63,7 @@
   display: flex;
   flex-direction: column;
   position: relative;
+  z-index: 0;
   > * {
     flex: 1;
     text-overflow: ellipsis;
@@ -80,7 +81,7 @@
 
 .@{class-prefix-picker-view}-mask {
   position: absolute;
-  z-index: 100;
+  z-index: 10000;
   left: 0;
   top: 0;
   width: 100%;
